# devmgr

./: .jiu.toml  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: progress.rs
scripts/: version.sh
src/: devcontainer.rs  exec.rs  lib.rs  main.rs  terminal.rs
tests/: integration_test.rs
