[package]
name = "devmgr"
version = "0.1.1"
edition = "2024"
readme = "README.md"
description = "Small utility for managing devcontainers."
keywords = ["devcontainer", "docker", "cli"]
categories = ["development-tools", "command-line-utilities"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/devmgr"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
argh = { version = "0.1.19", default-features = false, features = ["help"] }
bollard = { version = "0.20.2", default-features = false, features = ["pipe"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt", "signal"] }

[target.'cfg(unix)'.dependencies]
termion = "4.0.6"

[[bin]]
name = "devmgr"
required-features = ["cli"]

[features]
cli = []

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]
